Increase size of input fields to possibly fix whats broken on mobile

--- a/src/app/budget/budget-edit/budget-edit.component.scss
+++ b/src/app/budget/budget-edit/budget-edit.component.scss
@@ -8,7 +8,7 @@ label {
 }
 
 input {
-    height: 1.4rem;
+    height: 1.6rem;
     font-size: 1.2rem;
     text-align: left;
 }
